@startuml IntegerStateMachine
title Integer Detector State Diagram

state "Read First Character" as Start
state "Read Remaining Digits" as Digits
state "Accept" as Accept
state "Reject" as Reject

[*] --> Start

Start --> Digits : [1-9]
Start --> Reject : [0]
Start --> Reject : [non-digit]
Start --> Reject : [end]

Digits --> Digits : [0-9]
Digits --> Reject : [non-digit]
Digits --> Accept : [end]

Accept --> [*]
Reject --> [*]
@enduml
